# FiniteEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: ___run___.map  atlas.atlas  floor.atlas  furniture.atlas  game.prefab  intro.map  item.proto  map1  map1.map  map2  map2.map  map3  map3.map  npc.prefab  npc.proto  npcs.atlas  region.proto  sco.prefab  slabs.atlas  sso.prefab  static.proto  terrain.atlas  trees.atlas  walls.atlas  walls2.atlas
assets/shaders/: basic.shader
assets/spr/cliff/: cliff1.sprite  cliff2.sprite  cliff3.sprite  cliffs1.sprite  cliffs2.sprite  cliffs3.sprite
assets/spr/furniture/: .qoi  _0000_bara.sprite  _0000_barrel2.sprite  _0000_barrel3.sprite  _0000_fruitpot1.sprite  _0000_pot1.sprite  _0000_table1.sprite  _0001_barb.sprite  _0001_chairbl.sprite  _0001_fruitpot2.sprite  _0001_pot2.sprite  _0002_flowerpot.sprite  _0002_pot3.sprite  _0002_table2.sprite  _0003_barc.sprite  _0003_chairtr.sprite  _0003_fruitcrate.sprite  _0003_pot4.sprite  _0004_chairtl.sprite  _0004_crate1.sprite  _0005_crate2.sprite  _0006_chairbr.sprite  _0006_fruitcrate2.sprite  _0007_crate3.sprite  _0008_fruitcrate3.sprite  _0009_flowerpot2.sprite  _0010_fruitcrate4.sprite  _0011_crate4.sprite
assets/spr/nature/: .qoi  oakstump.sprite  oaktree.sprite  pinestump.sprite  pinetree.sprite
assets/spr/nature/rock/: rock1.sprite  rockl.sprite  rocklr.sprite  rockr.sprite  rockrl.sprite
assets/spr/terrain/: .metadata  .qoi  dirt1.sprite  dirt2.sprite  dirt3.sprite  dirt4.sprite  dirt5.sprite  dirt6.sprite  dirt7.sprite  grassdirt1.sprite  grassdirt10.sprite  grassdirt11.sprite  grassdirt12.sprite  grassdirt2.sprite  grassdirt3.sprite  grassdirt4.sprite  grassdirt5.sprite  grassdirt6.sprite  grassdirt7.sprite  grassdirt8.sprite  grassdirt9.sprite  grassdirt_1.sprite  grassdirt_10.sprite  grassdirt_11.sprite  grassdirt_12.sprite  grassdirt_13.sprite  grassdirt_14.sprite  grassdirt_15.sprite  grassdirt_16.sprite  grassdirt_17.sprite  grassdirt_2.sprite  grassdirt_3.sprite  grassdirt_4.sprite  grassdirt_5.sprite  grassdirt_6.sprite  grassdirt_7.sprite  grassdirt_8.sprite  grassdirt_9.sprite
assets/spr/walls/: .qoi  _0000_rwall1.sprite  _0001_lwall1.sprite  _0002_ldoor1.sprite  _0003_rdoor1.sprite  _0004_rwindow1.sprite  _0005_rwalls1.sprite  _0006_rwalls2.sprite  _0007_lwindow1.sprite  _0008_lwalls1.sprite  _0009_lwalls2.sprite  _0010_lwindow2.sprite  _0011_rwindow2.sprite  _0012_pillar1.sprite  _0013_pillar2.sprite  _0014_rwall2.sprite  _0015_lwall2.sprite  _0016_rdoor2.sprite  _0017_ldoor2.sprite  _0018_rwalls3.sprite  _0019_lwalls3.sprite  _0020_rwalls3.sprite  _0021_ldoor3.sprite
assets/spr/walls2/: .qoi  _0000_lwall.sprite  _0001_rwall.sprite  _0002_rwall2.sprite  _0003_lwin1.sprite  _0004_lwin2.sprite  _0005_ldoor1.sprite  _0006_lwin3.sprite  _0007_lwall3.sprite  _0008_lwall4.sprite  _0009_lwall5.sprite  _0010_lwall6.sprite  _0011_lwall7.sprite  _0012_pillar1.sprite  _0013_pillar2.sprite  _0014_pillar3.sprite  _0015_pillar4.sprite  _0016_rwin2.sprite  _0017_rwin3.sprite  _0018_rdoor1.sprite  _0019_rwall3.sprite  _0020_rwall4.sprite  _0021_rwall5.sprite  _0022_rwall6.sprite
assets/spr/walls2/roof/: .qoi  roof1.sprite  roof2.sprite  roof3.sprite  roof4.sprite  roof5.sprite  roof6.sprite  roof7.sprite  roof8.sprite
assets/terrain/: .qoi  grassdirt1.sprite  grassdirt10.sprite  grassdirt11.sprite  grassdirt12.sprite  grassdirt2.sprite  grassdirt3.sprite  grassdirt4.sprite  grassdirt5.sprite  grassdirt6.sprite  grassdirt7.sprite  grassdirt8.sprite  grassdirt9.sprite
plugins/example_plugin/: CMakeLists.txt
plugins/example_plugin/src/: example.cpp
plugins/gm_plugin/: CMakeLists.txt
plugins/gm_plugin/src/: core.cpp
prototypes/: item.json  npc.json  region.json  sound.json  static.json
src/: include.hpp  main.cpp
src/api/: builtin.hpp  components.hpp  game.hpp  game_api.h  layer.hpp  math_utils.hpp  msgbuff.hpp  msgvar.hpp  plugin.hpp  plugin_main.cpp  register.hpp  types.hpp
src/core/: application.cpp  application.hpp  atlas.hpp  atlas_scene_editor.hpp  atlas_scene_object.hpp  dialog_utils.cpp  file_explorer.hpp  gui_layer.cpp  gui_layer.hpp  imgui_utils.cpp  imgui_utils.hpp  navmesh.cpp  navmesh.hpp  proto_scene_object.hpp  prototype.cpp  prototype.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_layer.cpp  scene_layer.hpp  scene_layer_isometric.cpp  scene_layer_object.cpp  scene_layer_object.hpp  scene_layer_regions.cpp  scene_layer_sprites.cpp  scene_npc.cpp  scene_npc.hpp  scene_object.cpp  scene_object.hpp  shared_resource.cpp  shared_resource.hpp
src/core/ecs/: base.cpp  base.hpp  behavior.cpp  behavior.hpp  builtin.cpp  builtin.hpp  component.cpp  component.hpp  core.cpp  core.hpp  explorer.cpp  factory.cpp  factory.hpp  system.cpp  system.hpp
src/core/editor/: atlas_scene_editor.hpp  catalogue_editor.hpp  file_editor.cpp  file_editor.hpp  imgui_control.cpp  imgui_control.hpp  json_editor.cpp  json_editor.hpp  proto_editor.hpp  prototype_editor.cpp  prototype_editor.hpp
src/utils/: dialog_utils.cpp  dialog_utils.hpp  easing.hpp  imgui_utils.cpp  imgui_utils.hpp  imguicanvas.cpp  imguiline.cpp  imguiline.hpp  ini.hpp  lib_utils.cpp  lib_utils.hpp  lquadtree.hpp  lquery.hpp  math_utils.hpp  matrix2d.hpp  msgbuff.hpp  msgvar.hpp  mustache.hpp  pathfinder.hpp  quadtree.hpp  spatial.hpp  std_utils.hpp  svstream.hpp  triangle.cpp  triangle.h
tools/: json_folder_to_combined_header.py  texture_pack.py
